--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.ladenthin</groupId>
     <artifactId>javacommons</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <prerequisites>
         <maven>3.0.1</maven>
     </prerequisites>
