--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,6 @@ addons:
     build_command_prepend: "mvn clean"
     build_command:   "mvn -DskipTests=true compile"
     branch_pattern: coverity_scan
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
